--- a/.github/workflows/Cypresstests-config.yml
+++ b/.github/workflows/Cypresstests-config.yml
@@ -7,10 +7,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Cypress run
-        uses: DemoCypressGitActions/github-action@v3
+        uses: ./
         with:
           build: npm run build
           start: npm start
-          
+
 
   
