--- a/action.yml
+++ b/action.yml
@@ -93,7 +93,7 @@ outputs:
     description: 'Cypress Dashboard URL if the run was recorded'
 runs:
   using: 'node16'
-  main: 'dist/index.js'
+  main: 'pages/index.js'
 branding:
   color: 'green'
   icon: 'check-square'
