--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
         run: |
           echo "step to install dependencies"
           npm install
+      - name: Start dev server
+        run: |
+          echo "starting dev server"
+          npm run dev 
       - name: run Tests Cypress
         uses: cypress-io/github-action@v5
         env: 
